# allowedflare

./: .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .tool-versions  .yamllint.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  allowedflare.py  compose.yaml  confest.py  default.py  docker-compose.yaml  docker-compose.yml  gunicorn.conf.py  jupyterhub_config.py  manage.py  package-lock.json  package.json  pypi_compatible_build.py  pyproject.toml  requirements-macos.txt  requirements.in  requirements.txt  set_default_django_settings_module.py  test_allowedflare.py  wrangler.toml
.biobuddies/: includes.bash
.github/workflows/: actions.yaml  check.yaml  check.yml  main.yaml
allowedflare/: __init__.py  allowedflare.py  conftest.py  django.py  juptyerhub.py  jupyter.py  login.html  test_allowedflare.py  test_core.py  test_django.py
allowedflare-proxy/: index.test.ts  index.ts
demodj/: asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
django_allowedflare/: __init__.py  test.py
jupyterhub_allowedflare/: __init__.py
