[build-system]
backend-path = ['']
build-backend = 'pypi_compatible_build'
requires = ['setuptools>=61.0', 'setuptools_scm[toml]>=6.2', 'wheel']

[project]
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Internet :: WWW/HTTP :: Session',
]
description = 'Authenticate to Django with JSON Web Tokens (JWTs) signed by Cloudflare Access'
dependencies = ['cryptography', 'pyjwt', 'requests']
dynamic = ['version']
license = 'BSD-3-Clause'
name = 'allowedflare'
readme = 'README.md'

[project.optional-dependencies]
precommit = [
    'actionlint-py',
    'codespell',
    'cookiecutter',
    'django-stubs',
    'djangorestframework-stubs[compatible-mypy]',
    'hadolint-py @ git+https://github.com/AleksaC/hadolint-py.git',
    'mypy',
    'pre-commit',
    'pre-commit-hooks',
    'ruff',
    'types-setuptools',
    'shellcheck-py',
    'shfmt-py',
    'typos',
    # uv from asdf
    'yamllint',
]
demo = [
    'dj-notebook',
    'django',
    'django-extensions',
    'django-health-check',
    'django-sql-explorer',
    'djangorestframework',
    'gunicorn',
    'jupyterlab',
]
build = ['build', 'twine']
test = ['pytest', 'pytest-cov', 'pytest-django', 'pytest-mock']

[project.urls]
Homepage = 'https://github.com/biobuddies/allowedflare'

[tool.codespell]
ignore-words-list = 'afterall'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'demodj.settings'

[tool.ruff.format]
quote-style = 'single'
skip-magic-trailing-comma = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.django-stubs]
django_settings_module = 'demodj.settings'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    'EM101', # Allow exceptions to use string literals because keeping code as simple as possible is more important than keeping tracebacks as simple as possible.
]

[tool.mypy]
plugins = ['mypy_drf_plugin.main', 'mypy_django_plugin.main']
enable_error_code = [
    'ignore-without-code',
    # briefly experimented with 'mutable-override' but couldn't handle narrowing like
    # `str | None` in base class to just `str` in subclass
    'redundant-cast',
    'redundant-expr',
    'redundant-self',
    'truthy-bool',
    'truthy-iterable',
    'unimported-reveal',
    'unreachable',
    'unused-awaitable',
    'unused-ignore',
]

[tool.setuptools]
packages = ['allowedflare']

[tool.setuptools_scm]
